--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0; 
+    padding: 0; 
+    perspective: 1px; 
+    transform-style: preserve-3d;
+    height: 100%;
+}
