--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -40,17 +40,25 @@ section {
 }
   
 #navbar a {
-    display: inline;
+    display: inline-block;
     color: #f2f2f2;
     text-align: center;
-    padding: 20px;
     text-decoration: none;
-    font-size: 1.3em; 
+    max-width: 40px;
+    padding: 0 20px;
 }
   
 #navbar a:hover {
     background-color: #ddd;
     color: black;
+}
+
+#navbar img {
+    width: 100%;
+}
+
+#navbar .about{
+    width: 50%;
 }
 
 .downButton {
