--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -17,7 +17,7 @@
     top: 0;
     left: 0;
     width: 100%; 
-    height: 100vh;
+    height: 92vh;
     z-index: 0;
     background-color: #000;
 }
@@ -28,7 +28,7 @@ section {
 
 .headerImage {
     text-align: center;
-    height: 100vh;
+    height: 92vh;
 }
 
 #navbar {
@@ -60,7 +60,7 @@ section {
 }
 
 .downButton {
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     padding: 30px 0 30px 0; 
@@ -70,7 +70,7 @@ section {
 }
 
 #pauseBtn {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 95%;
     width: 2%;
@@ -120,6 +120,7 @@ section {
 
 #about h1 {
     margin-top: 0; 
+    padding-top: 100px;
 }
 
 #photos {
