--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -16,7 +16,7 @@
 <div class = "content">
     <section id = "about" class = "cfx">
         <h1>Over ons</h1>
-        <img src = "./assets/images/selfie.jpeg">
+        <img src = "./assets/images/selfie.png">
         <p> NxT Escape is een escape room die die ontwikkelt is voor studenten die geïnteresseerd zijn in of meer voeling willen krijgen met de richting NxT Media Technology. Aan de hand van een applicatie, puzzels en raadsels die geïnspireerd zijn op het nieuwe curriculum kunnen de studenten proeven van de richting NxT Media Technology.</p>
     </section>
             
